--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container header__container">
         <nav class="nav">
           <a href="#hero" class="page-header__logo"
-            >Web<span class="header-logo__accent">Studio</span></a
+            >Web<span class="logo__accents">Studio</span></a
           >
           <ul class="site-nav list">
             <li class="site-nav__item nav-current">
