--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-          <a href="#hero" class="page-header__logo logo"
+          <a href="#hero" class="page-header__logo"
             >Web<span class="page-header__logo--accents">Studio</span></a
           >
           <ul class="site-nav list">
@@ -548,7 +548,7 @@
     <footer class="page-footer" id="contacts">
       <div class="container page-footer__container">
         <div class="page-footer__address-thumb address-thumb">
-          <a lang="en" href="#hero" class="footer__logo logo"
+          <a lang="en" href="#hero" class="footer__logo"
             >Web<span class="logo__accent">Studio</span></a
           >
           <address class="address">
