--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-           <a href="#hero" class="page-header__logo"
-            >Web<span class="page-header-logo__accent">Studio</span></a
-          >
+          <a lang="en" class="page-header__logo" href="./index.html"><span
+                        class="page-header-logo__accent">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="site-nav__item nav-current">
               <a
