--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,28 +15,29 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Мета-тег viewport важен для адаптивных страниц</title> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- Шапка сайта -->
 
-    <header class="header">
+     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-          <a href="#hero" class="page-header__logo"
-            >Web<span class="page-header-logo__accent">Studio</span></a
-          >
+          <a lang="en" class="page-header__logo" href="./index.html"><span
+                        class="page-header-logo__accent">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="site-nav__item nav-current">
-              <a href="index.html" class="site-nav__link link">Студія</a>
+              <a
+                href="index.html"
+                class="site-nav__link link "
+                >Студія</a
+              >
             </li>
             <li class="site-nav__item">
-              <a
-                href="portfolio.html"
-                class="site-nav__link site-nav__link--current link"
-                >Портфоліо</a
-              >
+              <a href="portfolio.html" class="site-nav__link link site-nav__link--current">Портфоліо</a>
             </li>
             <li class="site-nav__item">
               <a href="" class="site-nav__link link">Контакти</a>
