--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-          <a lang="en" class="page-header__logo" href="./index.html"><span
-                        class="page-header-logo__accent">Web</span>Studio</a>
+          <a lang="en" class="page-header__logo" href="./index.html"
+            ><span class="page-header-logo__accent">Web</span>Studio</a
+          >
           <ul class="site-nav list">
             <li class="site-nav__item nav-current">
               <a
@@ -99,7 +100,7 @@
                 </svg>
               </div>
               <h3 class="feature__sub-title">Увага до деталей</h3>
-              <p class="feature__discription">
+              <p class="feature__description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
@@ -111,7 +112,7 @@
                 </svg>
               </div>
               <h3 class="feature__sub-title">Пунктуальність</h3>
-              <p class="feature__discription">
+              <p class="feature__description">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
@@ -123,7 +124,7 @@
                 </svg>
               </div>
               <h3 class="feature__sub-title">Планування</h3>
-              <p class="feature__discription">
+              <p class="feature__description">
                 Так само консультація з широким активом значною мірою зумовлює
               </p>
             </li>
@@ -136,7 +137,7 @@
                 </svg>
               </div>
               <h3 class="feature__sub-title">Сучасні технології</h3>
-              <p class="feature__discription">
+              <p class="feature__description">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -549,7 +550,7 @@
     <footer class="page-footer" id="contacts">
       <div class="container page-footer__container">
         <div class="page-footer__address-thumb address-thumb">
-           <a lang="en" href="#hero" class="footer__logo"
+          <a lang="en" href="#hero" class="footer__logo"
             >Web<span class="logo__accent">Studio</span></a
           >
           <address class="address">
