--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <section class="section features">
         <div class="container">
-          <h2 class="features-title__first">Особенности</h2>
+          <h2 class="features-title__first title--hidden">Особенности</h2>
           <ul class="feature__list list">
             <li class="feature__item">
               <div class="feature__icon-wrapper">
