--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 
       <section class="section portfolio">
         <div class="container">
-          <h2 class="features-title__first">Портфолио</h2>
+          <h2 class="features-title__first title--hidden">Портфолио</h2>
           <ul class="button-list filter">
             <li class="filter__item">
               <button type="button" class="filter__btn all">Все</button>
