--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </header>
     <main>
-      <!--Герой -->
+      <!--Hero -->
 
       <section class="section hero">
         <div class="container hero__container">
@@ -83,7 +83,7 @@
         </div>
       </section>
 
-      <!-- Преимущества  -->
+      <!-- Features -->
 
       <section class="section features">
         <div class="container">
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <!-- Деятельность  -->
+      <!-- Activity   -->
 
       <section class="section no-padding activity">
         <div class="container">
