--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
-          <a lang="en" class="page-header__logo" href="./index.html"
-            ><span class="page-header-logo__accent">Web</span>Studio</a
-          >
+          <a lang="en" class="page-header__logo" href="./index.html"><span
+                        class="page-header-logo__accent">Web</span>Studio</a>
+          <ul class="site-nav list">
           <ul class="site-nav list">
             <li class="site-nav__item nav-current">
               <a
